<resources>
    <string name="app_name">LocationBasedReminders</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="new_account">New Account</string>
    <string name="enter_username">Enter New Username</string>
    <string name="enter_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="exit">Exit</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_location">Get Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="back">Back</string>
    <string name="reminders">Reminders</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="reminder_dashboard">Reminder Dashboard</string>
    <string name="new_reminder">New</string>
    <string name="find_location">Find Location</string>
    <string name="UpdateNotice">Note: It may take up to 5 minutes for updates to take effect.</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="latitude_reminder">Latitude</string>
    <string name="longitude_reminder">Longitude</string>
    <string name="geofence_radius">Geofence Radius (m)</string>
    <string name="description">Description</string>
</resources>